--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <div class="col-lg-4 mt-4">
         <div class="card text-center ministries-border ministries-bg ">
           <div class="card-body">
-            <div><img src="images/ministries/gift2.svg" alt="gift" class="w-25"></div>
+            <div><img src="images/ministries/gift.svg" alt="gift" class="w-25"></div>
             <h5 class="card-title mt-3 fw-bold font-family-heading">Charity Ministries</h5>
             <p class="card-text mt-3 grey-text grey-color">long established fact that a reader will be distracted by the
               readable content of a
@@ -164,8 +164,8 @@
           <div class="card-body">
             <h5>26.10.2013</h5>
             <div class="d-flex justify-content-between ">
-              <span> <img src="images/shine/Time Circle.svg"><span class="grey-text grey-color">12:00am</span></span>
-              <span><img src="images/shine/Location.svg"><span class="grey-text grey-color">Kingdom Church</span></span>
+              <span> <img src="images/shine/time-circle.svg"><span class="grey-text grey-color">12:00am</span></span>
+              <span><img src="images/shine/location.svg"><span class="grey-text grey-color">Kingdom Church</span></span>
             </div>
             <h4 class="card-title mt-4 font-family-heading">Faithful Hearts,<br> Boundless Grace.</h4>
             <p class="card-text grey-color grey-text mt-md-4 mt-2">long established fact that a reader will be
