--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               readable content of a
               page when looking at its.</p>
             <div class="mt-3 grey-text fw-medium  fw-5 ">LEARN MORE &nbsp;<span
-                class="ministies-dot position-absolute  "><img src="images/ministries/Arrow/Caret_Right_SM.png"></span>
+                class="ministies-dot position-absolute text-white fw-bold ">></span>
             </div>
           </div>
         </div>
@@ -119,7 +119,7 @@
               readable content of a
               page when looking at its.</p>
             <div class="mt-3 grey-text fw-medium  fw-5 ">LEARN MORE &nbsp;<span
-                class="ministies-dot position-absolute  "><img src="images/ministries/Arrow/Caret_Right_SM.png"></span>
+                class="ministies-dot position-absolute text-white fw-bold ">></span>
             </div>
           </div>
         </div>
@@ -134,7 +134,7 @@
               readable content of a
               page when looking at its.</p>
             <div class="mt-3 grey-text fw-medium  fw-5 ">LEARN MORE &nbsp;<span
-                class="ministies-dot position-absolute  "><img src="images/ministries/Arrow/Caret_Right_SM.png"></span>
+                class="ministies-dot position-absolute  text-white fw-bold">></span>
             </div>
           </div>
         </div>
