--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
 
+  <!--navbar-->
   <Section>
     <div class="container padding-body ">
       <nav class="navbar navbar-expand-xl  ">
@@ -46,9 +47,7 @@
       </nav>
     </div>
 
-    <div class="container-fluid">
       <hr class="grey-color d-xl-none d-block  m-lg-5 m-3">
-    </div>
     <div class="d-xl-flex d-none nav-hr position-relative  bottom-100 ">
       <hr class="grey-color w-50 m-0">
       <hr class="grey-color w-50 m-0">
@@ -69,6 +68,7 @@
           class="me-4 d-block d-xl-none position-absolute  cursour-class dup-logo"></a></div>
   </Section>
 
+  <!--hero-section-->
   <section class="container mt-5 padding-body mb-5 position-relative ">
     <div class="row  ">
       <div class="col-md-9"><img src="images/sherin-hero/house.svg" alt="house" class="w-100"></div>
@@ -83,6 +83,7 @@
     </div>
   </section>
 
+  <!--ministries-->
   <section class="container padding-body ministries">
     <h1
       class="ps-3  font-family-heading border border-5 ministries-heading fw-bold font-lg border-start border-bottom-0 border-top-0 border-end-0    border-danger mt-5">
@@ -144,7 +145,8 @@
 
   </section>
 
-  <section class="container padding-body mb-5 " style="margin-top: 100px;">
+  <!--shine-events-->
+  <section class="container padding-body my-5 ">
     <div class="row mx-auto   ">
       <div class="col-lg-6 me-auto col-12 mt-4">
         <h1
@@ -181,9 +183,9 @@
           <div class="card-body">
             <h5>26.10.2013</h5>
             <div class="d-flex justify-content-between ">
-              <span> <img src="images/shine/Time Circle.svg" alt="icon"><span
+              <span> <img src="images/shine/time-circle.svg" alt="icon"><span
                   class="grey-text grey-color">12:00am</span></span>
-              <span><img src="images/shine/Location.svg" alt="icon"><span class="grey-text grey-color">Kingdom
+              <span><img src="images/shine/location.svg" alt="icon"><span class="grey-text grey-color">Kingdom
                   Church</span></span>
             </div>
             <h4 class="card-title mt-4 font-family-heading">Faithful Hearts,<br> Boundless Grace.</h4>
@@ -200,9 +202,9 @@
           <div class="card-body">
             <h5>26.10.2013</h5>
             <div class="d-flex justify-content-between ">
-              <span> <img src="images/shine/Time Circle.svg" alt="icon"><span
+              <span> <img src="images/shine/time-circle.svg" alt="icon"><span
                   class="grey-text grey-color">12:00am</span></span>
-              <span><img src="images/shine/Location.svg" alt="icon"><span class="grey-text grey-color">Kingdom
+              <span><img src="images/shine/location.svg" alt="icon"><span class="grey-text grey-color">Kingdom
                   Church</span></span>
             </div>
             <h4 class="card-title mt-4 font-family-heading">Faithful Hearts,<br> Boundless Grace.</h4>
@@ -219,9 +221,9 @@
           <div class="card-body">
             <h5>26.10.2013</h5>
             <div class="d-flex justify-content-between ">
-              <span> <img src="images/shine/Time Circle.svg" alt="icon"><span
+              <span> <img src="images/shine/time-circle.svg" alt="icon"><span
                   class="grey-text grey-color">12:00am</span></span>
-              <span><img src="images/shine/Location.svg" alt="icon"><span class="grey-text grey-color">Kingdom
+              <span><img src="images/shine/location.svg" alt="icon"><span class="grey-text grey-color">Kingdom
                   Church</span></span>
             </div>
             <h4 class="card-title mt-4 font-family-heading">Faithful Hearts,<br> Boundless Grace.</h4>
@@ -238,9 +240,9 @@
           <div class="card-body">
             <h5>26.10.2013</h5>
             <div class="d-flex justify-content-between ">
-              <span> <img src="images/shine/Time Circle.svg" alt="icon"><span
+              <span> <img src="images/shine/time-circle.svg" alt="icon"><span
                   class="grey-text grey-color">12:00am</span></span>
-              <span><img src="images/shine/Location.svg" alt="icon"><span class="grey-text grey-color">Kingdom
+              <span><img src="images/shine/location.svg" alt="icon"><span class="grey-text grey-color">Kingdom
                   Church</span></span>
             </div>
             <h4 class="card-title mt-4 font-family-heading">Faithful Hearts,<br> Boundless Grace.</h4>
@@ -257,9 +259,9 @@
           <div class="card-body">
             <h5>26.10.2013</h5>
             <div class="d-flex justify-content-between ">
-              <span> <img src="images/shine/Time Circle.svg" alt="icon"><span
+              <span> <img src="images/shine/time-circle.svg" alt="icon"><span
                   class="grey-text grey-color">12:00am</span></span>
-              <span><img src="images/shine/Location.svg" alt="icon"><span class="grey-text grey-color">Kingdom
+              <span><img src="images/shine/location.svg" alt="icon"><span class="grey-text grey-color">Kingdom
                   Church</span></span>
             </div>
             <h4 class="card-title mt-4 font-family-heading">Faithful Hearts,<br> Boundless Grace.</h4>
@@ -276,12 +278,14 @@
 
   </section>
 
+  <!--page-control-->
   <section class="container padding-body justify-content-center my-5 gap-2 d-flex">
     <div class="page-control text-center pink-background text-white  p-2 cursour-class">1</div>
     <div class="page-control text-center p-2 border border-primary cursour-class">2</div>
     <div class="page-control text-center  p-2">></div>
   </section>
 
+  <!--footer-->
   <section class="footer container-fluid padding-body position-relative ">
     <img src="images/footer/statue.svg" alt="statue" class="position-absolute footer-statue d-xxl-block d-none">
     <div class="row pt-2">
@@ -330,7 +334,7 @@
       </div>
       <div class="col-lg-4 mt-2">
         <h6 class="pt-5 text-white fs-5">Subscribe to our newsletter</h6>
-        <p class="py-xl-3">Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam.</p>
+        <p class="py-xl-3 py-1">Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam.</p>
         <div class="py-xl-3"><input type="text" placeholder="Enter your email "
             class="p-2 w-75 input-bg rounded-1 border border-0"> </div>
         <div class="py-3">
