--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Shine-page</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -65,7 +65,7 @@
       </nav>
     </div>
     <div class="logo"><a href="#"><img src="images/navbar/nav-logo.svg" alt="logo"
-          class="me-4 d-block d-xl-none position-absolute  cursour-class dup-logo"></a></div>
+          class="me-4 d-block d-xl-none position-absolute  cursour-class nav-second-logo"></a></div>
   </Section>
 
   <!--hero-section-->
